--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Commissioner&display=swap');
 
 body {
-   background-color: rgb(14, 12, 12);
+   /* background-color: rgb(14, 12, 12); */
+   background-color: rgb(24, 13, 13);
    width: 100%;
    height: 100%;
    margin: 0px;
