--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -9,7 +9,27 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 5px;
-    background-color: burlywood;
+    padding: 3px;
+    background-color: #ffcd90;
     margin: -8px -8px;
+}
+
+.logo-img {
+    width: 150px;
+}
+
+.search-box {
+    background-color: white;
+    padding: 10px;
+    border-radius: 8px;
+    width: 30%;
+}
+
+.search-box > input {
+    border: none;
+    outline: none;
+}
+
+.display-mode {
+    font-size: 30px;
 }
