--- a/src/components/sidenavbar/sidenav.css
+++ b/src/components/sidenavbar/sidenav.css
@@ -2,17 +2,30 @@
     display: flex;
     flex-direction: column;
     position: fixed;
-    gap: 3rem;
-    border: 2px solid brown;
+    gap: 4rem;
     width: 16rem;
     text-align: center;
-    height: 80vh;
+    height: 90vh;
     padding: 10px;
+    margin-top: 10px;
     margin-left: -1.8rem;
-    background-color: aqua;
+    background-color: rgb(24, 13, 13);
+    box-shadow: 1px 2px 3px rgb(71, 71, 71);
   }
   
   .sidenav-links {
     text-decoration: none;
-    color: black;
+    color: white;
+  }
+
+  .sidenav-btn {
+    width: 5rem;
+    position: relative;
+    left: 33%;
+    /* top: 30%; */
+    border: none;
+    padding: 5px;
+    border-radius: 6px;
+    background-color: rgb(184, 29, 29);
+    color: white;
   }
