--- a/src/components/userSuggestion/userSuggestion.css
+++ b/src/components/userSuggestion/userSuggestion.css
@@ -1,9 +1,9 @@
 .user-list-area {
     position: fixed;
-    right: 2px;
+    right: 3px;
     width: 18rem;
     height: fit-content;
-    border: 1px solid blue;
+    box-shadow: 2px 2px 6px rgb(71, 71, 71);
 }
 
 .user-list-area > h3 {
@@ -18,7 +18,7 @@
 .user-details {
     display: flex;
     justify-content: space-between;
-    border-bottom: 1px solid grey;
+    border-bottom: 0.3px solid rgb(96, 96, 96);
     gap: 0rem;
 }
 
@@ -28,4 +28,9 @@
 
 .user-area-action-btns {
     margin: 15px;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: #daffef;
+    border: none;
+    border-radius: 8px;
 }
