--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -97,7 +97,21 @@ margin-top: 10px;
 }
 
 .update-details {
-    box-shadow: 2px 2px 10px solid grey;
+    position: absolute;
+    right: 30rem;
+    padding: 3px;
+    text-align: center;
+    width: 5rem;
+    font-weight: bold;
+    font-size: 14px;
+    color: black;
+    border-radius: 10px;
+    background-color: rgb(214, 229, 242);
+    
+}
+
+.update-options {
+    cursor: pointer;
 }
 
 .post-info {
@@ -117,6 +131,7 @@ margin-top: 10px;
     cursor: pointer;
     box-shadow: 1px 2px 5px rgba(107, 107, 107, 0.7);
     padding: 5px;
+    border-radius: 10px;
 }
 
 .sort-action-btn > span {
