--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,9 @@ body {
    /* font-family: 'Jost', sans-serif; */
    font-family: 'Commissioner', sans-serif;
 }
+
+.page-heading {
+   color: azure;
+   text-align: center;
+   margin-top: 3rem;
+}
