--- a/src/components/sidenavbar/sidenav.css
+++ b/src/components/sidenavbar/sidenav.css
@@ -7,7 +7,7 @@
     text-align: center;
     height: 90vh;
     padding: 10px;
-    margin-top: 10px;
+    margin-top: 1.2rem;
     margin-left: -1.8rem;
     background-color: rgb(24, 13, 13);
     box-shadow: 1px 2px 3px rgb(71, 71, 71);
