--- a/src/components/userSuggestion/userSuggestion.css
+++ b/src/components/userSuggestion/userSuggestion.css
@@ -1,7 +1,9 @@
 .user-list-area {
     position: fixed;
-    right: 3px;
+    color: azure;
+    right: 10px;
     width: 18rem;
+    margin-top: 2rem;
     height: fit-content;
     box-shadow: 2px 2px 6px rgb(71, 71, 71);
 }
@@ -33,4 +35,18 @@
     background-color: #daffef;
     border: none;
     border-radius: 8px;
+}
+
+.search-box {
+    background-color: white;
+    padding: 10px;
+    border-radius: 8px;
+    margin-left: 2.5rem;
+    margin-top: 2rem;
+    width: 70%;
+}
+
+.search-box > input {
+    border: none;
+    outline: none;
 }
