--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,22 +4,31 @@
     left: 0;
     right: 0;
     width: 99.6%;
+    height: 10vh;
     z-index: 10;
     display: flex;
     justify-content: space-evenly;
+    gap: 50rem;
     align-items: center;
     padding: 3px;
-    background-color: #534444;
+    background-color: #5f5443;
     color: azure;
     margin: -8px -8px;
 }
 
 .logo-img {
-    width: 150px;
+    width: 220px;
+    margin-bottom: 12px;
+    filter: invert(90%);
+}
+
+.nav-details {
+    display: flex;
 }
 
 
 
 .display-mode {
     font-size: 30px;
+    padding: 10px;
 }
