--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -112,7 +112,7 @@ margin-top: 10px;
 }
 
 .update-details {
-    position: absolute;
+    /* position: absolute; */
     right: 30rem;
     padding: 4px;
     text-align: center;
