--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -4,11 +4,11 @@
     left: 0;
     right: 0;
     width: 99.6%;
-    height: 10vh;
+    height: 8vh;
     z-index: 10;
     display: flex;
     justify-content: space-evenly;
-    gap: 50rem;
+    /* gap: 50rem; */
     align-items: center;
     padding: 3px;
     background-color: #5f5443;
