--- a/src/features/auth/auth.css
+++ b/src/features/auth/auth.css
@@ -1,11 +1,135 @@
 .login-area {
-    color: aliceblue;
-    display: flex;
-    flex-direction: column;
-    width: 30rem;
+  color: aliceblue;
+  height: 100vh;
+  width: 100%;
 }
 
+.login-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 0rem;
+  padding: 15px;
+  margin: 50px auto;
+  border-radius: 13px;
+  width: 30rem;
+  background-color: rgb(149 108 108 / 60%);
+  box-shadow: 1px 3px 8px rgba(51, 51, 51, 0.8);
+  /* height: 100vh; */
+}
+
+.input-area {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  width: 80%;
+}
+
+.login-input-field {
+  padding: 15px;
+  outline: none;
+  margin: 7px;
+  border: 1px solid #a5a3a3;
+  font-size: 15px;
+  border-radius: 8px;
+}
+
+.signin-buttons {
+    display: flex;
+    flex-direction: column;
+  }
+
 .auth-action-btn {
-    width: 5rem;
-    margin-top: 10px;
+  padding: 7px;
+  border: none;
+  border-radius: 10px;
+  margin: 10px;
+  width: 10rem;
+  color: black;
+  font-size: 13px;
+  font-weight: bolder;
+  cursor: pointer;
+  background-color: #daffef;
+  box-shadow: 1px 2px 3px rgba(0, 0, 0, 0.8);
+}
+
+.auth-action-btn:hover {
+    background-color: rgb(166, 165, 229);
+  }
+
+  .password-visibility-toggle {
+    position: absolute;
+    color: #777676;
+    top: 11.2rem;
+    left: 25rem;
+  }
+
+  .account-navigate {
+    text-decoration: none;
+    font-size: 14px;
+    color: #f9efef;
+  }
+  
+  .account-navigate:hover {
+    text-decoration: underline;
+  }
+
+  .password-hide-toggle {
+    position: absolute;
+    top: 27rem;
+    left: 25rem;
+    color: grey;
+  }
+  
+  .password-hide-toggle-confirm {
+    position: absolute;
+    top: 23rem;
+    left: 25rem;
+    color: grey;
+  }
+  
+
+@media (max-width: 650px) {
+  .login-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    top: 1rem;
+    padding: 20px;
+    margin: 50px auto;
+    width: 60%;
+    box-shadow: 1px 3px 10px rgba(51, 51, 51, 0.8);
+    /* height: 100vh; */
+  }
+
+  .input-area {
+    display: flex;
+    flex-direction: column;
+    padding: 5px;
+    width: 100%;
+  }
+
+  .password-visibility-toggle {
+    position: absolute;
+    top: 11.2rem;
+    left: 12rem;
+  }
+
+  .password-hide-toggle {
+    position: absolute;
+    top: 23rem;
+    left: 12rem;
+    color: grey;
+  }
+
+  .password-hide-toggle-confirm {
+    position: absolute;
+    top: 27rem;
+    left: 12rem;
+    color: grey;
+  }
 }
