--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Commissioner&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Heebo&display=swap');
+
 body {
    /* background-color: rgb(14, 12, 12); */
    background-color: rgb(24, 13, 13);
@@ -14,7 +16,8 @@ body {
 .App {
    /* font-family: 'Jost', sans-serif; */
    /* font-family: 'Commissioner', sans-serif; */
-   font-family: 'DM Sans', sans-serif;
+   /* font-family: 'DM Sans', sans-serif; */
+   font-family: 'Heebo', sans-serif;
 }
 
 ::-webkit-scrollbar {
