--- a/src/components/sidenavbar/sidenav.css
+++ b/src/components/sidenavbar/sidenav.css
@@ -19,12 +19,13 @@
   }
 
   .sidenav-btn {
-    width: 6rem;
+    width: 5rem;
     position: relative;
     left: 33%;
-    /* top: 30%; */
+    top: 15%;
     border: none;
     padding: 5px;
+    font-size: 12px;
     border-radius: 6px;
     background-color: rgb(184, 29, 29);
     color: white;
@@ -49,4 +50,117 @@
     border-radius: 100px;
     width: 20px;
     margin: 0px auto;
+  }
+
+  .post-close-icon {
+    float: right;
+    font-size: 25px;
+    color: azure;
+  }
+
+  .create-post-modal {
+    background-color: #212121;
+    position: fixed;
+    z-index: 10;
+    left: 32%;
+    width: 30rem;
+    padding: 10px;
+  }
+
+  .add-btn {
+    width: 6rem;
+    position: relative;
+    left: 33%;
+    /* top: 30%; */
+    border: none;
+    padding: 5px;
+    border-radius: 6px;
+    color: white;
+    cursor: pointer;
+    background-color: hsl(0deg 51.62% 46.37%);
+    color: azure;
+  }
+
+
+  @media (max-width: 1300px){
+    .side-navigation {
+      display: flex;
+      position: fixed;
+      gap: 1rem;
+      bottom: 0;
+      width: fit-content;
+      text-align: center;
+      padding: 20px;
+  }
+
+  .add-btn {
+    width: 3rem;
+    position: relative;
+    left: 25%;
+    /* top: 30%; */
+    border: none;
+    padding: 2px;
+    border-radius: 6px;
+    font-size: 14px;
+  }
+
+  .add-btn > span {
+    display: none;
+  }
+
+  .sidenav-btn {
+    width: 2rem;
+    position: relative;
+    padding: 5px;
+    font-size: 10px;
+  }
+
+  .sidenav-btn > span {
+    display: none;
+  }
+
+   .icon-desc {
+    display: none;
+   }
+  }
+
+  @media (max-width: 850px) {
+    .side-navigation {
+      display: flex;
+      flex-direction: row;
+      position: fixed;
+      align-items: center;
+      justify-content: space-evenly;
+      bottom: 0;
+      width: 100%;
+      height: 5vh;
+      text-align: center;
+      padding: 20px;
+  }
+
+  .add-btn {
+   display: none;
+  }
+
+  .add-btn > span {
+    display: none;
+  }
+
+  .sidenav-btn {
+    width: 2rem;
+    position: relative;
+    left: 0%;
+    top: 0%;
+    right: 20px;
+    padding: 5px;
+    font-size: 10px;
+  }
+
+  .sidenav-btn > span {
+    display: none;
+  }
+
+   .icon-desc {
+    display: none;
+   }
   }
