--- a/src/components/userProfile/userProfile.css
+++ b/src/components/userProfile/userProfile.css
@@ -8,7 +8,7 @@
 }
 
 .user-details-section {
-    box-shadow: 0px 5px 10px #6563631f;
+    box-shadow: 0px 3px 10px #6563631f;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,7 +28,7 @@
     display: flex;
     gap: 5rem;
     padding: 15px;
-    box-shadow: 1px 4px 9px rgb(32, 30, 30);
+    box-shadow: 1px 0px 9px rgb(32, 30, 30);
     text-align: center;
 }
 
@@ -173,5 +173,35 @@ textarea {
 .avatar-item:hover {
     border: 5px solid rgb(145, 76, 69);
     border-radius: 100px;
+}
+
+@media (max-width: 1300px)
+{
+    .profile-area {
+        width: fit-content;
+        position: static;
+        left: 0;
+        top: 3rem;
+        padding: 0px;
+        margin-top: 37px;
+        font-size: 15px;
+    }
+
+    .edit-form-modal {
+        position: fixed;
+        display: flex;
+        flex-direction: column;
+        left: 2%;
+        top: 10%;
+        color: black;
+        font-weight: 600;
+        border-radius: 20px;
+        box-shadow: 2px 3px 5px black;
+        padding: 3px;
+        font-size: 14px;
+        height: 75vh;
+        overflow: scroll;
+        width: fit-content;
+    }
 }
 
