--- a/src/components/postModal/postModal.css
+++ b/src/components/postModal/postModal.css
@@ -2,11 +2,11 @@
   position: fixed;
   left: 30%;
   top: 12%;
-  background-color: rgb(101, 90, 77);
+  background-color: #212121;
   color: black;
   z-index: 200;
   font-weight: 600;
-  border-radius: 20px;
+  border-radius: 10px;
   box-shadow: 2px 3px 5px black;
   padding: 20px;
   width: 35rem;
