--- a/src/components/userProfile/userProfile.css
+++ b/src/components/userProfile/userProfile.css
@@ -61,8 +61,8 @@
     flex-direction: column;
     left: 32%;
     top: 10%;
-    background-color: rgb(164, 145, 121);
-    color: black;
+    background-color: rgba(38, 35, 31,0.9);
+    color: azure;
     font-weight: 600;
     border-radius: 20px;
     box-shadow: 2px 3px 5px black;
@@ -193,7 +193,6 @@ textarea {
         flex-direction: column;
         left: 2%;
         top: 10%;
-        color: black;
         font-weight: 600;
         border-radius: 20px;
         box-shadow: 2px 3px 5px black;
