--- a/src/components/posts/posts.css
+++ b/src/components/posts/posts.css
@@ -6,7 +6,7 @@
 
 .post-specs {
   padding: 15px;
-  box-shadow: 0px 2px 5px rgb(37, 37, 37);
+  box-shadow: 0px 1px 6px rgb(37, 37, 37);
   margin-bottom: 3rem;
   border-radius: 10px;
 }
@@ -94,6 +94,11 @@
   color: azure;
   border-radius: 8px;
   float: right;
+  cursor: pointer;
+}
+
+.post-create-btn:hover {
+  background-color: hsl(0, 50%, 29%);
 }
 
 .post-avatar {
