--- a/src/components/sidenavbar/sidenav.css
+++ b/src/components/sidenavbar/sidenav.css
@@ -81,6 +81,10 @@
     color: azure;
   }
 
+  .add-btn:hover {
+    background-color: hsl(0, 47%, 24%);
+  }
+
 
   @media (max-width: 1300px){
     .side-navigation {
