--- a/src/components/userSuggestion/userSuggestion.css
+++ b/src/components/userSuggestion/userSuggestion.css
@@ -5,7 +5,8 @@
     width: 18rem;
     margin-top: 2rem;
     height: fit-content;
-    box-shadow: 2px 2px 6px rgb(71, 71, 71);
+    box-shadow: 1px 2px 10px rgb(32, 29, 29);
+    border-radius: 10px;
 }
 
 .user-list-area > h3 {
