--- a/src/features/auth/auth.css
+++ b/src/features/auth/auth.css
@@ -2,6 +2,10 @@
   color: aliceblue;
   height: 100vh;
   width: 100%;
+  background: url('https://blog.contentstudio.io/wp-content/uploads/2021/12/MicrosoftTeams-image-2.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 
@@ -16,7 +20,7 @@
   margin: 50px auto;
   border-radius: 13px;
   width: 30rem;
-  background-color: rgb(149 108 108 / 60%);
+  background-color: rgba(66, 48, 48, 0.8);
   box-shadow: 1px 3px 8px rgba(51, 51, 51, 0.8);
   /* height: 100vh; */
 }
