fix: fixed comment id bug

--- a/src/features/singlePost/singlePost.css
+++ b/src/features/singlePost/singlePost.css
@@ -68,7 +68,7 @@
 
 .comment-changes {
     position: absolute;
-    right: 0;  
+    right: -3.5rem;  
     background-color: #3a3d67;
     padding: 10px;
     border-radius: 10px;
